# TelemetryFramework

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
aggregator/: CMakeLists.txt  client.cpp  main.cpp
aggregator/aggregator/: Makefile  cmake_install.cmake
aggregator/include/networking/: networking.h
aggregator/server/: Makefile  cmake_install.cmake
client/: CMakeLists.txt  client.h  main.cpp
client/include/: client_pipe.h
client/src/: networking.cpp
common/: zmq_functions.h
common/include/: filesystem_generated.h  foo_procedure_generated.h  memory_generated.h  read_procedure_generated.h  read_response_generated.h  request_generated.h  response_generated.h  usage_generated.h  zmq_helpers.h
common/schemas/: filesystem.fbs  foo_procedure.fbs  memory.fbs  read_procedure.fbs  read_response.fbs  request.fbs  response.fbs  usage.fbs
include/: zmq_helpers.h
server/: CMakeLists.txt  README.md  main.cpp  serialize.cpp  serialize.h  server.cpp  server.h
ventilator/: main.cpp
